Minor alignment issues and conditional hiding

--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -207,11 +207,29 @@ h3.wp_vimeo_heading {
 }
 
 .text_center,
-.text_center p {
+.text_center p,
+.video_post,
+.video_post p {
     text-align: center;
+}
+
+.note_post,
+.note_post p {
+    text-align: left;
 }
 
 /* Multi-select */
 .chosen-container-multi .chosen-choices {
     padding: 3px 5px;
 }
+
+.fusion-logo img {
+    height: 50px !important;
+    margin-top: 3px;
+}
+
+.wp_vimeo_note_title input {
+    display: block;
+    margin-left: 0;
+}
+
